smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-on-namespace.smithy
// Parse error at line 2, column 1 near `@d`: Expected a namespace definition, but found unexpected syntax
@deprecated
namespace com.foo
